Bug fixes - fixed fixable bugs in the progress bar. Was unable to fix the minor bug where the progress fails but download continues. Cleaned up debug print statements and notebook outputs for conversion to py file

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Enabling notebook extension jupyter-js-widgets/extension...\n",
-      "      - Validating: ok\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "import json\n",
@@ -44,10 +35,8 @@
     "from tkinter import filedialog\n",
     "import os\n",
     "\n",
-    "\n",
     "import pathlib\n",
     "\n",
-    "!jupyter nbextension enable --py widgetsnbextension\n",
     "from tqdm.notebook import tqdm_notebook as tqdm\n",
     "\n",
     "home_url = \"https://animepahe.ru/\"\n",
@@ -64,8 +53,7 @@
     "\n",
     "\n",
     "\n",
-    "#keyword = input(\"Enter the name of the anime you want to download> \")\n",
-    "keyword = \"Bluelock\"\n",
+    "keyword = input(\"Enter the name of the anime you want to download> \")\n",
     "\n",
     "#Searches for the anime in the animepahe database\n",
     "def Searcher(keyword):\n",
@@ -81,18 +69,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please enter the number belonging to the anime you want from the list below\n",
-      "1 Blue Lock\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Prompts the user to select the index of the anime they want from a list of the search results and returns the id of the chosen anime\n",
     "def AnimeSelection(results):\n",
@@ -118,20 +97,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'C:\\\\Anime\\\\Blue Lock'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def SetDownloadFolderPath(anime_title):\n",
     "    \n",
@@ -150,22 +118,20 @@
     "\n",
     "\n",
     "\n",
-    "#download_folder_path = SetDownloadFolderPath(anime_title)\n",
+    "download_folder_path = SetDownloadFolderPath(anime_title)\n",
     "\n",
-    "download_folder_path = anime_folder_path+anime_title\n",
     "try:\n",
     "    os.mkdir(download_folder_path)\n",
     "    \n",
     "except:\n",
     "    pass\n",
     "\n",
-    "download_folder_path = anime_folder_path+\"\\\\\"+anime_title\n",
-    "download_folder_path"
+    "download_folder_path = anime_folder_path+\"\\\\\"+anime_title"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,17 +142,24 @@
     "    episode_data = json.loads(response.content.decode(\"UTF-8\"))[\"data\"]\n",
     "    episode_sessions = [episode[\"session\"] for episode in episode_data]\n",
     "    episode_links = [home_url+\"play/\"+anime_id+\"/\"+str(episode_session) for episode_session in episode_sessions]\n",
-    "    return episode_links\n",
+    "    return  episode_links\n",
     "\n",
-    "try:\n",
-    "    episode_links = EpisodeLinks(anime_id)\n",
-    "except:\n",
-    "    print(\"Baka you do not have an internet connection, please twy agwain\")\n"
+    "episode_links = EpisodeLinks(anime_id)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,12 +174,13 @@
     "    #Scrapes the download data of each episode and stores the info for each quality and dub or sub in a list which is contained in another list containing all episodes\n",
     "    download_info = [[episode_info.text.strip() for episode_info in episode_data] for episode_data in download_data] \n",
     "    return (download_links, download_info)   \n",
-    "download_links, download_info = DownloadData(episode_links)\n"
+    "download_links, download_info = DownloadData(episode_links)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,19 +257,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Would you like to uWuse the following swaved settings?\n",
-      "quality: 360p\n",
-      "sub\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def SaveSettings():\n",
     "    senpwai_stuff_path = anime_folder_path+\"\\\\Senpwai stuff\"\n",
@@ -342,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,74 +361,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I will try my best to skip files that are already downloaded, Gambarimasu\n",
-      "Let me cook\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[WDM] - Downloading: 16.9kB [00:00, 4.33MB/s]                   \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading.. .\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e2d27636c6f4e60916707b2f69236a6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading Blue Lock Episode 22:   0%|          | 0.00/69.0 [00:00<?, ?Mb/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading.. .\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c93dc4aef9c4d68a01fc02d8475ee86",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading Blue Lock Episode 23:   0%|          | 0.00/46.0 [00:00<?, ?Mb/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "All downloads completed succesfully, Senpwai ga saikyou no stando Da MUDA\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "#Automates download process\n",
@@ -592,24 +491,25 @@
     "            \n",
     "        file_path = file.resolve()\n",
     "\n",
-    "\n",
-    "        with tqdm(total=total_size, unit='Mb', unit_scale=True, desc=f'Downloading {anime_title} Episode {index+1}') as progress_bar:\n",
-    "        # Loop until the download is complete\n",
-    "            download_complete = False\n",
-    "            while not download_complete:\n",
-    "                current_size = os.path.getsize(file_path)/1000000\n",
-    "                # Get the current size of the file being downloaded\n",
-    "                # Calculate the progress of the download\n",
-    "                # Update the progress bar\n",
-    "                progress_bar.update(current_size - progress_bar.n)\n",
-    "                # Check if the download is complete\n",
-    "                if current_size >= total_size:\n",
-    "                    download_complete = True\n",
-    "                # Wait for a short period before checking the file size again\n",
-    "            progress_bar.desc = \"Complete\"\n",
-    "            progress_bar.close()\n",
-    "\n",
-    "        # Hide the progress bar\n",
+    "        try:\n",
+    "            with tqdm(total=total_size, unit='Mb', unit_scale=True, desc=f'Downloading {anime_title} Episode {index+1}') as progress_bar:\n",
+    "            # Loop until the download is complete\n",
+    "                download_complete = False\n",
+    "                while not download_complete:\n",
+    "                    # Get the current size of the file being downloaded\n",
+    "                    current_size = os.path.getsize(file_path)/1000000\n",
+    "                    # Calculate the progress of the download\n",
+    "                    # Update the progress bar\n",
+    "                    progress_bar.update(current_size - progress_bar.n)\n",
+    "                    # Check if the download is complete\n",
+    "                    if current_size >= total_size:\n",
+    "                        download_complete = True\n",
+    "                progress_bar.desc = f\"Completed {anime_title} Episode {index+1}\"\n",
+    "            # Hide the progress bar\n",
+    "                progress_bar.close()\n",
+    "        except:\n",
+    "            print(\"Failed to load progress bar but the download should continue normally... .I think :o\")\n",
+    "            return 0\n",
     "\n",
     "    tmpDeleter(download_folder_path)\n",
     "    \n",
@@ -620,53 +520,56 @@
     "\n",
     "    \n",
     "    while True:\n",
-    "           \n",
-    "        \n",
-    "        if not CompletionCheck(download_folder_path, total_downloads):\n",
     "\n",
-    "            if file_count < total_downloads:\n",
-    "                for index in range(start_index, total_downloads):\n",
-    "                    files = pathlib.Path(download_folder_path).glob(\"*\")\n",
+    "        try:\n",
+    "            if not CompletionCheck(download_folder_path, total_downloads):\n",
     "\n",
-    "                    #Selenium is used causse of the dynamically generated content\n",
-    "                    #get the pahewin predownload page\n",
-    "                    browser_page.get(configured_download_links[index])\n",
-    "                    #wait for the link to be dynamically generated\n",
-    "                    time.sleep(6)\n",
-    "                    #parse the new page with the link to the download page then search for the ddownload link\n",
-    "                    soup = BeautifulSoup(browser_page.page_source, \"html.parser\")\n",
-    "                    server_download_link = soup.find_all(\"a\", class_=\"btn btn-primary btn-block redirect\")[0][\"href\"]\n",
-    "                    #get the final download page\n",
+    "                if file_count < total_downloads:\n",
+    "                    for index in range(start_index, total_downloads):\n",
+    "                        files = pathlib.Path(download_folder_path).glob(\"*\")\n",
     "\n",
-    "                    browser_page.get(server_download_link)                       \n",
-    "                    server_download_link = server_download_link.replace(\"/f/\", \"/d/\", 1)\n",
-    "                    #click the download link by submitting a dynamically generated form\n",
-    "                    browser_page.find_element(By.CSS_SELECTOR, 'form[action=\"%s\"]' %server_download_link).submit()\n",
-    "                    print(\"Downloading.. .\")\n",
-    "                    #wait for the file being downloaded to reflect in the download folder\n",
-    "                    time.sleep(2)\n",
-    "                    file_count+=1\n",
-    "                    ProgressBar(configured_download_sizes[index], download_folder_path, anime_title, index)\n",
-    "                    while(StillDownloading(download_folder_path)):\n",
+    "                        #Selenium is used causse of the dynamically generated content\n",
+    "                        #get the pahewin predownload page\n",
+    "                        browser_page.get(configured_download_links[index])\n",
+    "                        #wait for the link to be dynamically generated\n",
+    "                        time.sleep(6)\n",
+    "                        #parse the new page with the link to the download page then search for the ddownload link\n",
+    "                        soup = BeautifulSoup(browser_page.page_source, \"html.parser\")\n",
+    "                        server_download_link = soup.find_all(\"a\", class_=\"btn btn-primary btn-block redirect\")[0][\"href\"]\n",
+    "                        #get the final download page\n",
+    "\n",
+    "                        browser_page.get(server_download_link)                       \n",
+    "                        server_download_link = server_download_link.replace(\"/f/\", \"/d/\", 1)\n",
+    "                        #click the download link by submitting a dynamically generated form\n",
+    "                        browser_page.find_element(By.CSS_SELECTOR, 'form[action=\"%s\"]' %server_download_link).submit()\n",
+    "                        print(\"Downloading.. .\")\n",
+    "                        #wait for the file being downloaded to reflect in the download folder\n",
     "                        time.sleep(2)\n",
+    "                        file_count+=1\n",
     "\n",
-    "                        #if one download takes more than 3 hours then exit as a fail\n",
+    "                        ProgressBar(configured_download_sizes[index], download_folder_path, anime_title, index)\n",
+    "                        while(StillDownloading(download_folder_path)):\n",
+    "                            time.sleep(2)\n",
     "\n",
-    "                \n",
-    "            else:\n",
-    "                #wait before checking for completion again\n",
-    "                time.sleep(2)\n",
+    "                            #if one download takes more than 3 hours then exit as a fail\n",
+    "\n",
+    "                    \n",
+    "                else:\n",
+    "                    #wait before checking for completion again\n",
+    "                    time.sleep(2)\n",
     "\n",
     "\n",
-    "        else:\n",
-    "            return 1\n",
+    "        \n",
+    "    \n",
+    "        except:\n",
+    "                return 0\n",
     "\n",
     "\n",
     "def DownloadStatus(download_status):\n",
     "    if download_status:\n",
     "        return \"All downloads completed succesfully, Senpwai ga saikyou no stando Da MUDA\"\n",
     "    elif not download_status:\n",
-    "        return \"Error while trying to download, you probably don't have an internet connection, Baka. Please try again uWu\"\n",
+    "        return \"Error while trying to download, you probably don't have an internet connection, Baka. Or something goofy happened on my end. Please try again uWu\"\n",
     "\n",
     "\n",
     "\n",
@@ -678,49 +581,6 @@
     "\n",
     "elif len([n for n in no_list if n == prompt_reply]) > 0:\n",
     "    print(\"Sadge :(\")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ddfd501b803f4dae86099b9771134e87",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/4000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[17], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m4000\u001b[39m):\n\u001b[0;32m      4\u001b[0m     pbar\u001b[39m.\u001b[39mupdate(\u001b[39m1\u001b[39m)\n\u001b[1;32m----> 5\u001b[0m     time\u001b[39m.\u001b[39;49msleep(\u001b[39m0.0001\u001b[39;49m)\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "pbar = tqdm(total=4000)\n",
-    "\n",
-    "for x in range(4000):\n",
-    "    pbar.update(1)\n",
-    "    time.sleep(0.0001)\n",
     "\n"
    ]
   },
