Pre-alpha  clean-up - cleaned up any obvious bugs, created requirements.txt. This version of the program is more or less stable. A few bugs are still in the ProgressBar

--- a/deprecated_main.ipynb
+++ b/deprecated_main.ipynb
@@ -50,6 +50,7 @@
     "no_list = [\"no\", \"nope\", \"0\", \"n\"]\n",
     "\n",
     "anime_folder_path = \"C:\\\\Anime\"\n",
+    "default_download_folder_path = None\n",
     "\n",
     "\n",
     "\n",
@@ -116,17 +117,7 @@
     "        pass\n",
     "    return download_folder\n",
     "\n",
-    "\n",
-    "\n",
-    "download_folder_path = SetDownloadFolderPath(anime_title)\n",
-    "\n",
-    "try:\n",
-    "    os.mkdir(download_folder_path)\n",
-    "    \n",
-    "except:\n",
-    "    pass\n",
-    "\n",
-    "download_folder_path = anime_folder_path+\"\\\\\"+anime_title"
+    "\n"
    ]
   },
   {
@@ -278,7 +269,8 @@
     "        print(\"Would you like to uWuse the following swaved settings?\")\n",
     "        with open(config_path) as config_file:\n",
     "            config_settings = json.load(config_file)\n",
-    "            print(f\"quality: {config_settings['quality']}p\")\n",
+    "            print(f\"Quality: {config_settings['quality']}p\")\n",
+    "            print(f\"Default download folder: {config_settings['download_folder_path']}\")\n",
     "            print(f\"{config_settings['sub_or_dub']}\")\n",
     "        reply = input(\"> \")\n",
     "        if len([y for y in yes_list if y == reply]):\n",
@@ -293,6 +285,7 @@
     "\n",
     "    elif not config_path.is_file():\n",
     "        quality, sub_or_dub = SettingsPrompt()\n",
+    "        download_folder_path = prom\n",
     "        save_dict = {\"quality\": quality, \"sub_or_dub\": sub_or_dub}\n",
     "        with open(config_path, \"w\") as config_file   :\n",
     "            json.dump(save_dict, config_file)\n",
